--- a/angular.json
+++ b/angular.json
@@ -2,5 +2,41 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
-  "projects": {}
+  "projects": {
+    "ngx-wordpress": {
+      "projectType": "library",
+      "root": "projects/ngx-wordpress",
+      "sourceRoot": "projects/ngx-wordpress/src",
+      "prefix": "wp",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/ngx-wordpress/tsconfig.lib.json",
+            "project": "projects/ngx-wordpress/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ngx-wordpress/src/test.ts",
+            "tsConfig": "projects/ngx-wordpress/tsconfig.spec.json",
+            "karmaConfig": "projects/ngx-wordpress/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/ngx-wordpress/tsconfig.lib.json",
+              "projects/ngx-wordpress/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    }},
+  "defaultProject": "ngx-wordpress"
 }
