--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "name": "devdactic-library",
   "version": "0.0.0",
+  "author": "Simon Grimm",
+  "homepage": "https://devdactic.com/",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/saimon24/npx-wordpress.git"
+  },
+  "keywords": ["wordpress", "ionic", "angular"],
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -19,11 +27,14 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "@ionic/angular": "^4.7.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.800.6",
+    "@angular-devkit/build-ng-packagr": "~0.800.6",
     "@angular/cli": "~8.0.4",
     "@angular/compiler-cli": "~8.0.1",
     "@angular/language-service": "~8.0.1",
@@ -38,8 +49,10 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "ng-packagr": "^5.1.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
+    "tsickle": "^0.35.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   }
